--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
        body{
            margin: 0px;
-           overflow-x: hidden;
            font-family: Arial, Helvetica, sans-serif;
            background-color: black;
            width: 1360px;
+           overflow-x: hidden;
           
        }
        .Section1{
@@ -526,6 +526,12 @@ body{
             left: 180px;
 
         }
+        @media only screen and (min-width: 600px) and (max-width: 1030px){
+            body{
+                overflow-x: auto;
+            }
+        }
+
     }
        
     </style>
