--- a/index.html
+++ b/index.html
@@ -182,9 +182,10 @@
             left: 15px;
         }
         .Profile{
-            height: 220px;
+            height:220px;
             width: 220px;
             border-radius:50%;
+           
         }
         .name{
             position: absolute;
@@ -564,7 +565,7 @@ body{
               <!---Desktop and large screen device Navbar-->
             
                 <div class="Component1">
-                    <img src="profile.jpg" alt="Profile Image" class='Profile'>
+                    <img src="profile1.jpg" alt="Profile Image" class='Profile'>
                     <p class="name">Andyson</p>
                     <p class="school">University of Zambia</p>
                 </div>
