--- a/index.html
+++ b/index.html
@@ -527,6 +527,18 @@ body{
             left: 180px;
 
         }
+        .name{
+         position: absolute;
+         left: 48px;
+          font-size: 30px;
+            }
+        .school{
+         position: absolute;
+         top: 340px;
+         font-size: 20px;
+         left: 15px;
+          }
+
         @media only screen and (min-width: 600px) and (max-width: 1030px){
             body{
                 overflow-x: auto;
@@ -575,9 +587,9 @@ body{
                 <div class="data">
                     <div>
                         <h3 style="color: grey;">Interests:</h3>
-                            <li>Technology</li>
-                            <li>Call of Duty</li>
-                            <li>Music</li>
+                            <li>Artificial Intelligence</li>
+                            <li>Blockchain</li>
+                            <li>Space Technology</li>
                     </div>
                    <div class="data2">
                     <h3 style="color: grey;">Education:</h3>
@@ -632,10 +644,10 @@ body{
                     
                 </div>
                 <div class="two">
-                    <img class="projects" src="amjmovie.jpg" alt="amj website">
+                    <img class="projects" src="amjwebsite.jpg" alt="amj website">
                     <div class="projectdetail1">
                     <p class="heading5">AMJWEBSITE</p>
-                    <p id="web1"class="projectdis">My portfolio website which you are currently on, built with html,css and a little JavaScript. </p>
+                    <p id="web1"class="projectdis">My portfolio website which you are currently on, built in html,css and a little JavaScript. </p>
                     <a href="https://github.com/ThetaleofAj"><img class="repository" src="repository.png"></a>
                     </div>
                     
