--- a/index.html
+++ b/index.html
@@ -553,19 +553,19 @@ body{
         <nav>
             <a href="#" class="logo">AMJWEBSITE</a>
             <ul>
-                <li><a href="#Section1">Home</a></li>
+                <li><a href="#Home">Home</a></li>
                 <li><a href="#Section2">Skills</a></li>
                 <li><a href="#Section3">Projects</a></li>
                 <li><a href="#Section4">Contact</a></li>
             </ul>
         </nav>
-        <div  id="Section1" class="Section1">
+        <div  id="Home" class="Section1">
             <!--Mobile Navbar-->
             <div class="topnav">
                 <a href="#home" class="active">AMJWEBSITE</a>
                
                 <div id="myLinks">
-                  <a href="#Section1">Home</a>
+                  <a href="#Home">Home</a>
                   <a href="#Section2">Skills</a>
                   <a href="#Section3">Projects</a>
                   <a href="#Section4">Contact</a>
